// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Donation Day Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="donationDate"
        >
          <div
            className="dayString"
          >
            <span
              className="weekday"
            >
              יום ראשון
            </span>
            <span>
              10/12
            </span>
          </div>
          <div
            className="data"
          >
            <span>
              6
               תורים
            </span>
            <span
              className="dataDivider"
            >
              |
            </span>
            <span>
              4
               רשומים
            </span>
          </div>
        </div>
        <div
          className="availableAppointmentsToggle"
        >
          הצג תורים פנויים בלבד
          <div
            className="toggleContainer toggle"
            onClick={[Function]}
          >
            <div
              className="toggleCircle"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="slots"
      >
        <div>
          <div
            className="listHeader"
          >
            <div
              className="time"
            >
              11:00
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer no show"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="no show"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip redChip"
                    >
                      לא הגיע
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="listHeader"
          >
            <div
              className="time"
            >
              13:00
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer completed"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="completed"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip greenChip"
                    >
                      הושלם
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
            <div
              className="dividerContainer"
            >
              <div
                className="divider"
              />
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer bookedAppointment"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="bookedAppointment"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
            <div
              className="dividerContainer"
            >
              <div
                className="divider"
              />
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer cancelled"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="cancelled"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="availableAppointmentText"
                  >
                    תור ריק
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip redChip"
                    >
                      בוטל לאחרונה
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  add-person.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            className="listHeader"
          >
            <div
              className="time"
            >
              14:30
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer booked"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="booked"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="donorName"
                  >
                    משה כהן
                  </div>
                  <div
                    className="recentChangeChipContainer"
                  >
                    <div
                      className="recentChangeChip greenChip"
                    >
                      חדש
                    </div>
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  chevron-left.svg
                </svg>
              </div>
            </div>
            <div
              className="dividerContainer"
            >
              <div
                className="divider"
              />
            </div>
          </div>
          <div>
            <div
              className="appointmentPreviewContainer availableAppointment"
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="deleteButton"
                onClick={[Function]}
              >
                <svg>
                  trash.svg
                </svg>
                <div
                  className="deleteButtonText"
                >
                  מחק תור
                </div>
              </div>
              <div
                className="appointmentPreviewContent"
                data-appointment-id="availableAppointment"
              >
                <div
                  className="nameAndChip"
                  onClick={[Function]}
                >
                  <div
                    className="availableAppointmentText"
                  >
                    תור ריק
                  </div>
                </div>
                <svg
                  onClick={[Function]}
                >
                  add-person.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="emptySpace"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-extended MuiFab-sizeLarge MuiFab-primary makeStyles-fab-32 muirtl-1ew8fi0-MuiButtonBase-root-MuiFab-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        className="text"
      >
        הוסף תור
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Screens/Donation Day No Appointments 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton muirtl-lsbm6g-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            chevron-right.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים 🛠️
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="donationDate"
        >
          <div
            className="dayString"
          >
            <span
              className="weekday"
            >
              יום ראשון
            </span>
            <span>
              10/12
            </span>
          </div>
          <div
            className="data"
          >
            <span>
              0
               תורים
            </span>
            <span
              className="dataDivider"
            >
              |
            </span>
            <span>
              0
               רשומים
            </span>
          </div>
        </div>
        <div
          className="availableAppointmentsToggle"
        >
          הצג תורים פנויים בלבד
          <div
            className="toggleContainer toggle"
            onClick={[Function]}
          >
            <div
              className="toggleCircle"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="slots"
      >
        <div
          className="noAppointments"
        >
          טרם נקבעו תורים ליום זה
        </div>
        <div
          className="emptySpace"
        />
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiFab-root MuiFab-extended MuiFab-sizeLarge MuiFab-primary makeStyles-fab-33 muirtl-1ew8fi0-MuiButtonBase-root-MuiFab-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium muirtl-i4bv87-MuiSvgIcon-root"
        data-testid="AddIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <div
        className="text"
      >
        הוסף תור
      </div>
    </button>
  </div>
</div>
`;
